# BMLB2025_2026

./: .gitignore  course_conda_environment.yaml  learning_goals.md  pyproject.toml  readme.md
Day1/Practical_1/: PracticalMaterialDay1_AfternoonPractical.ipynb  PracticalMaterialDay1_AfternoonPractical_Answers.ipynb  PracticalMaterialDay1_ShortPractical1.ipynb  PracticalMaterialDay1_ShortPractical1_Answers.ipynb  PracticalMaterialDay1_ShortPractical2.ipynb  PracticalMaterialDay1_ShortPractical2_Answers.ipynb
Day1/Presentation/: ~$Day1_1_IntroductionUnivariateLinearRegressionCostFunctionGradientDescent_1.pptx
Day2/Practical_2/: Cuttings_FromPracticals.ipynb  PimaIndiansDiabetes_MessedUpNoise.csv  PracticalMaterialDay2_AfternoonPractical.ipynb  PracticalMaterialDay2_AfternoonPractical_Answers.ipynb  PracticalMaterialDay2_ShortPractical1.ipynb  PracticalMaterialDay2_ShortPractical1_Answers.ipynb  PracticalMaterialDay2_ShortPractical2.ipynb  PracticalMaterialDay2_ShortPractical2_Answers.ipynb  cut_out_data_cleaning_short_practical_2.ipynb
Day3/Practical_3/: PracticalMaterialDay3_AfternoonPractical.ipynb  PracticalMaterialDay3_AfternoonPractical_Answers.ipynb  PracticalMaterialDay3_ShortPractical1.ipynb  PracticalMaterialDay3_ShortPractical2.ipynb  PracticalMaterialDay3_ShortPractical2_Answers.ipynb
Day3/Presentation/: Day3_2_ConvolutionalNeuralNetworks.pptx
Day4/Practical_4/: PracticalMaterialDay4_ShortPractical1_Answers.ipynb  PracticalMaterialDay4_ShortPractical2_Answers.ipynb
Project/: BMLB_Project_description_and_instruction_2025.docx
(+6 files in other folders)
